<resources>
    <string name="app_name" translatable="false">Meistertaxi</string>
    <string name="text_button_login">Sign In</string>
    <string name="hint_editText_password">Password</string>
    <string name="hint_editText_usuari">Username</string>
    <string name="text_button_newUser">Sign Up</string>
    <string name="text_name_register_activity">New account</string>
    <string name="Username">Name of the user</string>
    <string name="textEmail" translatable="false">Email</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_submit">Submit</string>
    <string name="text_cancel">Cancel</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_not_ready">The map is not ready</string>
    <string name="title_activity_menu_map" translatable="false">MenuMapActivity</string>
    <string name="nav_header_title" translatable="false">#### #########</string>
    <string name="nav_header_subtitle" translatable="false">####@#######.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_account">Account</string>
    <string name="pref_header_map">Map</string>

    <string name="pref_default_display_name">name</string>
    <string name="pref_default_display_surname">surname</string>

    <string name="Gender_text">Gender</string>
    <string-array name="Gender_list">
        <item>None</item>
        <item>Women</item>
        <item>Men</item>
    </string-array>
    <string-array name="gender_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="languages_list">
        <item>English</item>
        <item>Català</item>
        <item>Español</item>
    </string-array>
    <string-array name="languages_values">
        <item>en</item>
        <item>ca</item>
        <item>es</item>
    </string-array>

    <string-array name="currency_list">
        <item>Euros(€)</item>
        <item>Pounds(£)</item>
        <item>Dollar($)</item>
    </string-array>
    <string-array name="currency_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="style_map_list">
        <item>Default</item>
        <item>Retro</item>
        <item>Night</item>
    </string-array>
    <string-array name="style_map_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="Language_text">Language</string>
    <string name="Currency_text">Currency</string>
    <string name="Style_map_text">Map style</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation</string>
    <string name="confirm_password">Confirm password</string>
    <string name="taxi_driver">Taxi driver</string>
    <string name="pay">Pay</string>
    <string name="reserve_it_now">Reserve it now!</string>
    <string name="distance">Distance:</string>
    <string name="duration">Duration:</string>
    <string name="cost">Cost:</string>
    <string name="_0_km" translatable="false">0 km</string>
    <string name="_0_mins" translatable="false">0 mins</string>
    <string name="_0_euros" translatable="false">0 euros</string>
    <string name="your_reservations">Your reservations</string>
    <string name="configuration">Configuration</string>
    <string name="disconnect">Disconnect</string>
    <string name="user_surname">User\'s surname</string>
    <string name="smoke_text">Smoke</string>
    <string name="username_text">User name</string>
    <string name="show_transit_text">Show transit</string>
    <string name="conceptPaypal">Reservation in Meistertaxi</string>
    <string name="customize">Customize</string>
    <string name="accept">Accept</string>
    <string name="customize_reservation">Customize reservation</string>
    <string name="reservation_n">Reservation nº</string>
    <string name="starting_point">Starting point:</string>
    <string name="destination_point">Destination point:</string>
    <string name="date_points">Date:</string>
    <string name="time_points">Hour:</string>
    <string name="default_id_text" translatable="false">#id</string>
    <string name="city_from" translatable="false">City 1</string>
    <string name="city_to" translatable="false">City 1</string>
    <string name="default_date_value" translatable="false">00/00/0000</string>
    <string name="default_hour_value" translatable="false">00:00</string>
    <string name="customize_date">Customize date</string>
    <string name="customize_hour">Customize hour</string>
    <string name="you_can_modify_this_parameters">You can modify this parameters:</string>
    <string name="avatar_taxi_driver">Avatar taxi driver</string>
    <string name="name_driver_default" translatable="false">#### #########</string>
    <string name="licence_text">Licence:</string>
    <string name="licence_default_value" translatable="false">##########</string>
    <string name="configuration_button">Configuration button</string>
    <string name="disconnect_button">Disconnect button</string>
    <string name="the_app_logo">The app logo</string>
    <string name="enter_mail_to_retrieve_your_password">Enter mail to retrieve your password:</string>
    <string name="enter_email">Enter email</string>
    <string name="client_id_paypal" translatable="false">ASOBY-QQvBf_kxLtW8pzZo0e7Giaj34a5ECUYzo8WBitAGQoo1HT0YBfDCYU2xe6TxBtUQj5qFRHXm7v</string>
    <string name="pounds" translatable="false"> pounds</string>
    <string name="dollars" translatable="false"> dollars</string>
    <string name="euros_text" translatable="false"> euros</string>
    <string name="text_permission">Location permission is needed for this application</string>
    <string name="reserve_successful">Reservation made</string>
    <string name="reserve_successful_msg">Your reservation for PayPal has been made correctly. We hope you continue trusting with us.</string>
    <string name="date_error">The date would be more or equals than actual date</string>
    <string name="time_error">The time would be more or equals than actual time</string>
    <string name="send_text">Send</string>
    <string name="forgot_pass_text">Mail has been sent to the email address</string>
    <string name="account_created_text">Account has been created</string>
    <string name="route_not_found">No route found for coordinates</string>
    <string name="date_reservation" translatable="false">%s</string>
    <string name="hour_reservation" translatable="false">%s</string>
    <string name="default_notification_channel_id" translatable="false">default_channel</string>
    <string name="blank_fields_msg">There are a blank fields</string>
    <string name="sign_in_msg">Sign In</string>
    <string name="passwords_not_equals_msg">The passwords are not equals</string>
    <string name="password_six_char_msg">The password must have at least 6 characters</string>
    <string name="incorrect_email_msg">The email format is incorrect</string>
    <string name="email_exists_msg">The email has been already exists</string>
    <string name="auth_failed_msg">Authentication failed</string>
    <string name="log_in_msg">Log In</string>
    <string name="error_read_database_msg">Error to read from Database</string>
    <string name="destination_text">Destination:</string>
    <string name="date">Date:</string>
    <string name="hour_text">Hour:</string>
    <string name="default_hour" translatable="false">##:##</string>
    <string name="default_date" translatable="false">##/##/####</string>
    <string name="default_text_res" translatable="false">#############</string>
    <string name="origin_text">Origin:</string>
    <string name="id_reservation_text">Id reservation:</string>
    <string name="no_reservations">No reservations for this day</string>
</resources>
