<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/username_text" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_surname"
        android:inputType="textCapWords"
        android:key="surname"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/user_surname" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/Gender_list"
        android:entryValues="@array/gender_list_values"
        android:key="gender"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/Gender_text" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="smoke"
        android:title="@string/smoke_text" />

</PreferenceScreen>
